[gd_scene load_steps=13 format=2]

[ext_resource path="res://pixel_panel_wide.theme" type="Theme" id=1]
[ext_resource path="res://scenes/readyhelper.gd" type="Script" id=2]
[ext_resource path="res://pixel_button_round.tres" type="Theme" id=3]
[ext_resource path="res://font/ChronoLarge.tres" type="DynamicFont" id=4]
[ext_resource path="res://pixel_button_red.tres" type="Theme" id=5]
[ext_resource path="res://ui/combat_abilities.gd" type="Script" id=6]
[ext_resource path="res://pixel_panel_fade.theme" type="Theme" id=7]
[ext_resource path="res://ui/guard2.png" type="Texture" id=8]
[ext_resource path="res://ui/act.gd" type="Script" id=9]
[ext_resource path="res://font/Chrono.tres" type="DynamicFont" id=10]
[ext_resource path="res://gfx/unit/atbbar.png" type="Texture" id=11]
[ext_resource path="res://ui/ATBBar.gd" type="Script" id=12]

[node name="abilitymenu" type="Node2D"]
script = ExtResource( 6 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 704.0
margin_right = 256.0
margin_bottom = 976.0
theme = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="buttonhost" type="Node2D" parent="Panel"]
position = Vector2( 48, 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="attack" type="Button" parent="Panel/buttonhost"]
margin_left = 56.0
margin_top = 32.0
margin_right = 104.0
margin_bottom = 79.0
rect_scale = Vector2( 1, 1.01685 )
focus_neighbour_bottom = NodePath("../item")
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="RichTextLabel" parent="Panel/buttonhost/attack"]
margin_top = 39.3372
margin_right = 48.0
margin_bottom = 53.3372
bbcode_enabled = true
bbcode_text = "[center]Attack
"
text = "Attack
"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="defend" type="Button" parent="Panel/buttonhost"]
margin_left = -8.0
margin_top = 96.0
margin_right = 40.0
margin_bottom = 143.0
rect_scale = Vector2( 1, 1.01685 )
hint_tooltip = "Provides 50% general mitigation."
focus_neighbour_right = NodePath("../special")
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Panel/buttonhost/defend"]
self_modulate = Color( 0.4, 0.380392, 0.67451, 1 )
position = Vector2( 24, 23.6023 )
scale = Vector2( 2.46154, 1.96685 )
texture = ExtResource( 8 )

[node name="Label" type="RichTextLabel" parent="Panel/buttonhost/defend"]
margin_top = 39.3372
margin_right = 48.0
margin_bottom = 53.3372
bbcode_enabled = true
bbcode_text = "[center]Defend"
text = "Defend"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="special" type="Button" parent="Panel/buttonhost"]
margin_left = 120.0
margin_top = 96.0
margin_right = 168.0
margin_bottom = 143.0
rect_scale = Vector2( 1, 1.01685 )
focus_neighbour_left = NodePath("../defend")
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="RichTextLabel" parent="Panel/buttonhost/special"]
margin_top = 39.3372
margin_right = 48.0
margin_bottom = 53.3372
bbcode_enabled = true
bbcode_text = "[center]Abilities"
text = "Abilities"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item" type="Button" parent="Panel/buttonhost"]
margin_left = 56.0
margin_top = 160.0
margin_right = 104.0
margin_bottom = 207.0
rect_scale = Vector2( 1, 1.01685 )
focus_neighbour_top = NodePath("../attack")
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="RichTextLabel" parent="Panel/buttonhost/item"]
margin_top = 39.3372
margin_right = 48.0
margin_bottom = 53.3372
bbcode_enabled = true
bbcode_text = "[center]Items"
text = "Items"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="act" type="Button" parent="Panel/buttonhost"]
margin_left = 56.0
margin_top = 96.0
margin_right = 104.0
margin_bottom = 143.0
rect_scale = Vector2( 1, 1.01685 )
hint_tooltip = "Provides 50% general mitigation."
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 10 )
text = "READY"
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Panel/buttonhost/act"]
visible = false
self_modulate = Color( 0.4, 0.380392, 0.67451, 1 )
position = Vector2( 24, 23.6023 )
scale = Vector2( 2.46154, 1.96685 )
texture = ExtResource( 8 )

[node name="Label" type="RichTextLabel" parent="Panel/buttonhost/act"]
visible = false
margin_top = 8.0
margin_right = 48.0
margin_bottom = 39.0
bbcode_enabled = true
bbcode_text = "[center]
READY
"
text = "
READY
"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="escape" type="Button" parent="Panel/buttonhost"]
visible = false
margin_left = -8.0
margin_top = 216.0
margin_right = 172.0
margin_bottom = 250.0
rect_scale = Vector2( 1, 1.01685 )
theme = ExtResource( 5 )
custom_fonts/font = ExtResource( 4 )
text = "Escape (100%)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="readyhelper" type="RichTextLabel" parent="Panel"]
margin_left = 56.0
margin_top = -48.0
margin_right = 336.0
margin_bottom = -21.0
text = "Character not ready yet!"
scroll_active = false
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="namedisplay" type="Panel" parent="Panel"]
margin_left = 24.0
margin_top = -24.0
margin_right = 232.0
margin_bottom = 8.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ATBBar" type="TextureProgress" parent="Panel/namedisplay"]
self_modulate = Color( 1, 1, 1, 0.254902 )
margin_right = 208.0
margin_bottom = 32.0
value = 50.0
texture_progress = ExtResource( 11 )
nine_patch_stretch = true
stretch_margin_top = 2
stretch_margin_bottom = 2
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Panel/namedisplay"]
margin_left = 8.0
margin_top = 5.0
margin_right = 200.0
margin_bottom = 32.0
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "[center]Shumford "
text = "Shumford "
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="Panel/buttonhost/attack" to="." method="_on_attack_pressed"]
[connection signal="pressed" from="Panel/buttonhost/defend" to="." method="_on_defend_pressed"]
[connection signal="pressed" from="Panel/buttonhost/special" to="." method="_on_special_pressed"]
[connection signal="pressed" from="Panel/buttonhost/item" to="." method="_on_item_pressed"]
[connection signal="pressed" from="Panel/buttonhost/act" to="." method="_on_act_pressed"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
